--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,30 @@
-<h2>Sign up</h2>
+<div class="form f c">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <div class="top-bar f r">
+      <%= render 'shared/back_button' %>
+      <h2>SIGN UP</h2>
+      <%= f.submit "Next", class: 'topbar-button' %>
+    </div>
+    <div class="inputs-container f c">
+      <div class="registration inputs f c">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= f.label :name %>
+        <%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "Name" %>
 
+        <%= f.label :email %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email" %>
+
+        <%= f.label :password %>
+        <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password" %>
+        <% if @minimum_password_length %>
+          (<%= @minimum_password_length %> characters minimum)
+        <% end %>
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Password Confirmation" %>
+      </div>
+    </div>
+  <% end %>
+</div>
+<div class="bottom-block f">
   <%= render "devise/shared/error_messages", data: { turbo_frame: "modal" }, resource: resource %>
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
