--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,14 +1,20 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Categories</h1>
-
-<div id="categories">
-  <% @categories.each do |category| %>
-    <%= render category %>
-    <p>
-      <%= link_to "Show this category", category %>
-    </p>
-  <% end %>
-</div>
-
-<%= link_to "New category", new_category_path %>
+<% if !user_signed_in? %>
+  <div class="start-screen f c">
+    <div class="app-name f">
+      <h1>
+        SpendTracker
+      </h1>
+    </div>
+    <div class="start-buttons f c">
+      <%= link_to "Log in", new_session_path(:user), class: 'login f'%>
+      <%= link_to "Sign up", new_registration_path(:user), class: 'signup f' %>
+    </div>
+  </div>
+<% else %>
+  <div class="top-bar f r">
+    <%= link_to "←", destroy_user_session_path, method: :delete, data: { confirm: "Are you sure you want to sign out?" }, class:"back-button f r" %>
+    <h2 id="title">Categories</h2>
+    <%= link_to "New", new_category_path, class: 'topbar-button' %>
+  </div>
+  <%= render 'shared/category_info', categories: @categories, category_totals: @category_totals %>
+<% end %>
