--- a/app/views/spends/index.html.erb
+++ b/app/views/spends/index.html.erb
@@ -1,14 +1,19 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Spends</h1>
-
-<div id="spends">
-  <% @spends.each do |spend| %>
-    <%= render spend %>
-    <p>
-      <%= link_to "Show this spend", spend %>
-    </p>
+<div class="top-bar f r">
+  <%= render 'shared/back_button' %>
+  <h2><%= @category.name %></h2>
+  <%= link_to "New", new_category_spend_path, class: 'topbar-button' %>
+</div>
+<div class="credit f r">
+  <h3>Total credit</h3>
+  <span class="total-spent">$<%= @total_spend %>0</span>
+</div>
+<div class="block f c">
+  <% if @spends.present? %>
+    <% @spends.each do |spend| %>
+      <%= render spend %>
+    <% end %>
+  <% else %>
+    <span class="empty f c">Create a new Spend on <%= @category.name %></span>
   <% end %>
 </div>
 
-<%= link_to "New spend", new_spend_path %>
