--- a/app/views/spends/new.html.erb
+++ b/app/views/spends/new.html.erb
@@ -1,9 +1,1 @@
-<h1>New spend</h1>
-
-<%= render "form", spend: @spend %>
-
-<br>
-
-<div>
-  <%= link_to "Back to spends", spends_path %>
-</div>
+<%= render "form", spend: @spend, category: @category, categories: @categories %>
