--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,7 +46,7 @@ body {
   font-family: 'Proxima Nova Bold', sans-serif;
   background-color: #3778c2;
   margin: 0;
-  color: #434b54
+  color: #434b54;
 }
 
 .notice {
@@ -66,7 +66,7 @@ h3 {
 .back-button {
   color: #fff;
   font-size: 2rem;
-  height: max-content
+  height: max-content;
 }
 
 .top-bar {
