--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,23 @@
-<h2>Change your password</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+<div class="form f c">
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+    <div class="top-bar f r">
+      <%= render 'shared/back_button' %>
+      <h2>Password Recovery</h2>
+      <%= f.submit "Next", class: 'topbar-button' %>
+    </div>
+    <div class="inputs-container f c">
+      <div class="registration inputs f c">
+        <%= f.label :password, "New password" %>
+        <%= f.password_field :password, autofocus: true, autocomplete: "new-password", placeholder: 'Password' %>
+        <% if @minimum_password_length %>
+          (<%= @minimum_password_length %> characters minimum)
+        <% end %>
+        <%= f.label :password_confirmation, "Confirm new password" %>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: 'Password Confirmation' %>
+      </div>
+    </div>
+  <% end %>
+</div>
+<div class="bottom-block f">
   <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
