--- a/app/views/spends/index.html.erb
+++ b/app/views/spends/index.html.erb
@@ -1,7 +1,7 @@
 <div class="top-bar f r">
   <%= render 'shared/back_button' %>
   <h2><%= @category.name %></h2>
-  <%= link_to "New", new_category_spend_path, class: 'topbar-button' %>
+  <div></div>
 </div>
 <div class="credit f r">
   <h3>Total credit</h3>
@@ -15,5 +15,8 @@
   <% else %>
     <span class="empty f c">Create a new Spend on <%= @category.name %></span>
   <% end %>
+</div>
+<div class="create-button f">
+  <%= link_to "Add new transaction", new_category_path, class: 'new-button f' %>
 </div>
 
