--- a/app/views/spends/index.html.erb
+++ b/app/views/spends/index.html.erb
@@ -17,6 +17,6 @@
   <% end %>
 </div>
 <div class="create-button f">
-  <%= link_to "Add new transaction", new_category_path, class: 'new-button f' %>
+  <%= link_to "Add new transaction", new_category_spend_path, class: 'new-button f' %>
 </div>
 
